# weave_codeview

./: .cdweave_idx_yxtcpht1  .gitignore  .pycommands  cdwv.py  ex.py  viewer.py  wv_traces.jsonl
.github/workflows/: pages.yml
codeweave_package/: pyproject.toml
codeweave_package/codeweave/: __init__.py  _git.py  _logger.py  _sanity.py  _tui.py
codeweave_package/codeweave.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: getting-started.html
real_weave/: .gitignore
runs/: 20250218_000000_legacy.jsonl  20260218_140943_da95b7c9.jsonl
test_run/: .pycommands  demo.py
vscode-extension/: cdweave-viewer-0.0.1.vsix  codeweave-0.0.1.vsix  codeweave-0.0.2.vsix  esbuild.mjs  package-lock.json  package.json  package.sh  tsconfig.json
vscode-extension/src/: extension.ts
