[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeweave"
version = "0.1.0"
description = "Local JSONL logging and git snapshotting for Weave traces"
requires-python = ">=3.8"
dependencies = ["textual>=0.50.0"]

[project.scripts]
codeweave = "codeweave._tui:main"

[project.urls]
Homepage = "https://github.com/bdytx5/codeweave_package"
